--- a/views/characters.ejs
+++ b/views/characters.ejs
@@ -11,20 +11,12 @@
     <img src="/images/sample.jpg" class="responsive" />
 
     <h3>Star Wars characters </h1>
-    <%  { %>
-      <h4><%= characters[0].name %></h4>
-      <h4><%= characters[1].name %></h4>
-      <h4><%= characters[2].name %></h4>
-      <h4><%= characters[3].name %></h4>
-      <h4><%= characters[4].name %></h4>
-      <h4><%= characters[5].name %></h4>
-      <h4><%= characters[6].name %></h4>
-      <h4><%= characters[7].name %></h4>
-      <h4><%= characters[8].name %></h4>
-      <h4><%= characters[9].name %></h4>
+    <% characters.forEach(function(characters){ %>
+    <h4> <%= characters.name %> </h4>
+     
      
     
-    <% } %>
+    <% }) %>
 
     <link href="/css/style.css" rel="stylesheet" type="text/css">
 
